--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
             </div>
         </div>
     </main>
-<script defer src="https://maps.googleapis.com/maps/api/js?v=beta&key=AIzaSyC0r6H3EIK7hH4I5G9gjtPJpuDX_MBdFFc&callback=initMap&libraries=marker"></script>
+<script defer src="https://maps.googleapis.com/maps/api/js?v=beta&key=<--Api--Key-->&callback=initMap&libraries=marker"></script>
 </body>
 
 </html>
